<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">CollegeLancer</string>
    <string name="welcomeFreelancer">Hello, Freelancer.</string>
    <string name="welcomeSignInButton">Sign In</string>
    <string name="welcomeSignInGoogleButton">Continue with Google</string>
    <string name="welcomeSignInFBButton">Continue with Facebook</string>
    <string name="welcomeSignUpButton">Don\'t have an account? Sign Up Here</string>
    <string name="signupTextView">Sign Up.</string>
    <string name="signupButton">Join CollegeLancer</string>
    <string name="signupFBButton">Continue with Facebook</string>
    <string name="signupGoogleButton">Continue with Google</string>
    <string name="profDescription">Look out for students to help you with projects and research.</string>
    <string name="studentDescription">Work on projects from professors and organisations, and also look for other developers willing to collaborate on your project.</string>
    <string name="facebook_app_id">170733984257685</string>
    <string name="fb_login_protocol_scheme">fb170733984257685</string>
    <string-array name="departmentsEngg">
        <item>Select your branch of study/ department</item>
        <item>Computer Science and Engineering (CSE)</item>
        <item>Electronics and Communication Engineering (ECE)</item>
        <item>Electrical and Electronics Engineering (EEE)</item>
        <item>Mechanical Engineering</item>
        <item>Electronics and Instrumentation Engineering (EIE)</item>
    </string-array>
    <string-array name="studentSem">
        <item>Select your current semester</item>
        <item>1st Semester</item>
        <item>2nd Semester</item>
        <item>3rd Semester</item>
        <item>4th Semester</item>
        <item>5th Semester</item>
        <item>6th Semester</item>
        <item>7th Semester</item>
        <item>8th Semester</item>
    </string-array>
    <string name="semesterSelectAdvice">If you are in your summer break, or a year repeater, please select the semester you last attended.</string>
    <string name="open_nav_bar">Open the navigation bar.</string>
    <string name="close_nav_bar">Close the navigation bar.</string>
    <string-array name="studentSettingsArray">
        <item>User Profile</item>
        <item>Your Status</item>
        <item>Projects</item>
        <item>Your posted projects</item>
        <item>Badges and Certificates</item>
        <item>Help/ Complaints</item>
        <item>Notification Settings</item>
    </string-array>
    <string-array name="profSettingsArray">
        <item>User Profile</item>
        <item>Your Status</item>
        <item>Your posted projects</item>
        <item>Help/ Complaints</item>
        <item>Notification Settings</item>
    </string-array>
    <string name="firstStatusStudent">Your colleagues will now see you\'re available for projects and research work.</string>
    <string name="secondStatusStudent">Professors will now see you\'re up for research.</string>
    <string name="thirdStatusStudent">Your fellow freelancers will now be able to contact you for project collaboration.</string>
    <string name="fourthStatusStudent">You will be made available only to organizations and premium clients.</string>
    <string name="fifthStatusStudent">You will not be contacted for projects or research until you change your status.</string>
    <string name="transitionAnimation">Transition Animation</string>
</resources>