<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomeFreelancer"
        android:textSize="30sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="300dp" />

    <EditText
        android:id="@+id/welcomeEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Your 10 digit Phone Number/ E-mail ID"
        android:textSize="10sp"
        android:fontFamily="sans-serif-black"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/welcomePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Password"
        android:textSize="10sp"
        android:fontFamily="sans-serif-black"
        android:layout_below="@id/welcomeEmailEditText"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/welcomeSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/welcomeSignInButton"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcomePasswordEditText"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/welcomeSignInGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:padding="5dp"
        android:text="@string/welcomeSignInGoogleButton"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcomeSignInButton"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/welcomeSignInFBButton"
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/welcomeSignInFBButton"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcomeSignInGoogleButton"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/welcomeSignUpButton"
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/welcomeSignUpButton"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>