<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignUpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/signupTextView"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <EditText
            android:id="@+id/signupNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:hint="Enter your full name"
            app:layout_constraintBottom_toTopOf="@id/signupEmailEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupTextView"/>

        <EditText
            android:id="@+id/signupEmailEditText"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="Enter your E-mail ID"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupNameEditText"
            app:layout_constraintBottom_toTopOf="@id/signupPasswordEditText"
            android:layout_marginTop="45dp"/>

        <Button
            android:id="@+id/signupEnterEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Enter"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/signupEmailEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/signupPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:inputType="textPassword"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:hint="Enter a Strong Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signupConfPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/signupNameEditText" />

        <EditText
            android:id="@+id/signupConfPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            android:inputType="textPassword"
            android:hint="Confirm your Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toTopOf="@id/signupButton"
            app:layout_constraintTop_toBottomOf="@+id/signupPasswordEditText" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/signupButton"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/signupConfPasswordEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signupGoogleButton" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signupGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/signupGoogleButton"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/signupFBButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupButton" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/signupFBButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
            android:paddingLeft="23dp"
            android:text="@string/signupFBButton"
            android:textAllCaps="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupGoogleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>