<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/extraDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-black"
            android:text="Additional Details"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:inputType="textPersonName"
            android:hint="Enter your full name"
            app:layout_constraintTop_toBottomOf="@id/extraDetailsTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:hint="Enter your 10 digit phone number"
            android:inputType="phone"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/universityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="Which University do you belong to?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText"/>

        <TextView
            android:id="@+id/dateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="sans-serif-black"
            android:text="Select your date of birth:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/universityEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/dateOfBirthET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Click here to set your date of birth."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

        <TextView
            android:id="@+id/userType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="sans-serif-black"
            android:text="Your User Profile Type:"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/dateOfBirthET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/userTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userType">

            <RadioButton
                android:id="@+id/professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/profDescription"
                android:padding="5dp"
                android:text="Lecturer/ Professor"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/studentDescription"
                android:padding="5dp"
                android:text="Student Developer"
                android:textSize="14sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/userDeptTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="sans-serif-black"
            android:text="Select your branch/ department:"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/userTypeRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/deptEnggSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/departmentsEngg"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userDeptTV"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/studentSemTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="sans-serif-black"
            android:text="Select your current semester:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/deptEnggSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/studentSemSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/studentSem"
            android:textAlignment="center"
            android:tooltipText="@string/semesterSelectAdvice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentSemTV"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/student_profileBioTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="sans-serif-black"
            android:text="Type in a short bio:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/studentSemSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
            android:id="@+id/student_profileBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="Enter your bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/student_profileBioTV"/>

        <TextView
            android:id="@+id/student_SkillsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="sans-serif-black"
            android:text="Your current skills:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/student_profileBio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <AutoCompleteTextView
            android:id="@+id/student_Skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="Add Skills"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/student_SkillsTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:completionThreshold="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:imeOptions="actionDone"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mainTagChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/student_Skills"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:chipSpacingVertical="4dp" />

        <Button
            android:id="@+id/signupButtonGFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:text="@string/signupButton"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTagChipGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>